example to test template name macro

--- a/examples/template02/www/client/templates/home.html
+++ b/examples/template02/www/client/templates/home.html
@@ -2,3 +2,10 @@
 	<h1>Homepage</h1>
 	<p>body</p>
 </template>
+
+<!--
+<template name="home_comment">
+	<h1>Homepage</h1>
+	<p>body</p>
+</template>
+-->
