updated scaffold example, with first build

--- a/examples/scaffold/www/client/templates/main.html
+++ b/examples/scaffold/www/client/templates/main.html
@@ -1,1 +1,11 @@
-<template name="main">test</template>
+<template name="main">
+	<!-- main -->
+	<div class="container">
+		{{> yield}}
+	</div>
+</template>
+
+
+<template name="loading">
+	<div id="loader"></div>
+</template>
