new scaffold export

--- a/examples/scaffold/www/client/templates/admin/_login.html
+++ b/examples/scaffold/www/client/templates/admin/_login.html
@@ -1,5 +1,5 @@
 <!--
-This html template file is generated on 2017-03-02 17:10:59 from hxmeteor AutomaticTemplate macro.
+This html template file is generated on 2017-04-13 22:14:18 from hxmeteor AutomaticTemplate macro.
 It's the template for "src/client/templates/admin/Login.hx"
 
 - Current filename starts with an "_" to indicate a generated file, you should rename the file once you modified it
@@ -10,11 +10,12 @@ It's the template for "src/client/templates/admin/Login.hx"
 -->
 
 <template name="admin_login">
+	<!-- Start template: admin_login -->
 	<div class="container">
 		<h1>ADMIN_LOGIN</h1>
 		<p>template for Login.hx</p>
 		<p>test: {{test}}</p>
 		<button class="testBtn">click</button>
-	</div>
+	</div><!-- /.container -->
 </template>
 
