--- a/examples/scaffold/www/client/templates/_home.html
+++ b/examples/scaffold/www/client/templates/_home.html
@@ -1,5 +1,5 @@
 <!--
-This html template file is generated on 2017-03-02 17:10:59 from hxmeteor AutomaticTemplate macro.
+This html template file is generated on 2017-04-13 22:14:18 from hxmeteor AutomaticTemplate macro.
 It's the template for "src/client/templates/Home.hx"
 
 - Current filename starts with an "_" to indicate a generated file, you should rename the file once you modified it
@@ -10,11 +10,12 @@ It's the template for "src/client/templates/Home.hx"
 -->
 
 <template name="home">
+	<!-- Start template: home -->
 	<div class="container">
 		<h1>HOME</h1>
 		<p>template for Home.hx</p>
 		<p>test: {{test}}</p>
 		<button class="testBtn">click</button>
-	</div>
+	</div><!-- /.container -->
 </template>
 
