--- a/examples/macro/www/client/templates/component/componenttest.html
+++ b/examples/macro/www/client/templates/component/componenttest.html
@@ -1,5 +1,5 @@
 <!--
-This html template file is generated on 2017-04-14 00:25:33 with hxmeteor IMeteorComponent macro.
+This html template file is generated with hxmeteor IMeteorComponent macro.
 
 - Resistance is futile
 - Remove this file and next time Haxe Compiler builds, it will be back
